# coro

./: .envrc.sample  .gitignore  BUILD.md  CLAUDE.md  CMakeLists.txt  Doxyfile  README.md  conanfile.py  conanfile.txt  mkdocs.yml  requirements.txt
.github/workflows/: docs.yml  tests.yml
cmake/: Sanitize.cmake  pico_hal_build_module.cmake  pico_mqtt_build_module.cmake
doc/: architecture.md  cancellation_token.md  channels.md  cheatsheet.md  coroutine_scope.md  examples.md  executor_design.md  extra.css  file_io.md  future_and_stream.md  getting_started.md  grpc_tutorial.md  guidelines.md  index.md  io_coroutine.md  isr_safety.md  join_set.md  libuv_integration.md  module_structure.md  overview.md  patterns.md  pico_port.md  pipe_streaming.md  poll_streams.md  roadmap.md  select.md  shared_ptr_cycles.md  spawn_blocking.md  task_and_executor.md  task_ownership.md  waker_and_context_propagation.md  websocket_stream.md  work_sharing_executor.md  work_stealing_executor.md
doc/design/: architecture.md  cancellation_token.md  channels.md  coroutine_scope.md  future_and_stream.md  isr_safety.md  join_set.md  libuv_integration.md  lwip_config.md  module_structure.md  pico_port.md  pipe_streaming.md  poll_streams.md  signal_handling.md  task_ownership.md  waker_and_context_propagation.md  websocket_stream.md  work_stealing_executor.md
doc/notes/: patterns.md  shared_ptr_cycles.md
doc/pdf/: Makefile  README.md  cheatsheet.tex
doc/tutorials/: grpc_tutorial.md
examples/grpc/: .gitignore  CMakeLists.txt  README.md  conanfile.txt  grpc_server.h  hello_client.py  helloserver.cpp
examples/grpc/include/: grpc_server.h  packet.h
examples/grpc/python/: hello_client.py  plot_live_grpc.py
examples/grpc/src/: gendata.cpp  helloserver.cpp  helloworld.proto  plotsignal.proto  signalserver.cpp
examples/io/: CMakeLists.txt  fibonacci.cpp  length_prefixed_stream.cpp  tcp_echo_client.cpp  tcp_echo_server.cpp  ws_echo_client.cpp  ws_echo_server.cpp
examples/pico/: CMakeLists.txt  README.md  gen_proto.py  lwipopts.h  pico_tcp_echo_client.cpp  pico_tcp_echo_server.cpp  pico_ws2812_tcp.cpp  requirements.txt  test_echo_server.py  ws2812.py  ws2812_gui.py
examples/pico/led/: CMakeLists.txt  color.cpp  conanfile.py  effect_runner.cpp  effect_runner.h  effects.cpp  effects.h  led_driver.cpp  led_driver.h  pixel_buffer.h  ws2812.pio
examples/pico/led/conan_build/: CMakeLists.txt
examples/pico/pico_led/: CMakeLists.txt  conanfile.py
examples/pico/pico_led/include/pico_led/: color.h  effect_runner.h  effects.h  led_driver.h  pixel_buffer.h
examples/pico/pico_led/proto/: ws2812.options  ws2812.proto
examples/pico/pico_led/src/: color.cpp  effect_runner.cpp  effects.cpp  led_driver.cpp
examples/pico/profiles/: rp2040-arm-none-eabi.profile.example
examples/pico/tcp_echo/: CMakeLists.txt  conanfile.py  pico_tcp_echo_client.cpp
examples/pico/ws2812_tcp/: CMakeLists.txt  conanfile.py  lcd.h  wifi_credentials.h.example
include/coro/: co_invoke.h  coro.h  coro_stream.h  future.h  stream.h
include/coro/detail/: context.h  coro_scope.h  frame_pool.h  future_awaitable.h  intrusive_list.h  isr_flag.h  local_run_queue.h  mutex.h  poll_result.h  rc.h  relaxed_state.h  task.h  task_state.h  waker.h  work_stealing_deque.h
include/coro/io/: byte_buffer.h  byte_source.h  circular_byte_buffer.h  decoder_concept.h  decoder_stream.h  file.h  file.hpp  pipe.h  pipe.hpp  poll_stream.h  poll_stream.hpp  ring_buffer.h  signal.h  (+5 more)
pico/: CMakeLists.txt
src/: blocking_pool.cpp  cancellation_token.cpp  context.cpp  current_thread_executor.cpp  executor.cpp  file.cpp  io_service.cpp  pico_executor.cpp  pico_tcp_listener.cpp  pico_tcp_stream.cpp  pipe.cpp  runtime.cpp  single_threaded_executor.cpp  single_threaded_uv_executor.cpp  task.cpp  tcp_listener.cpp  tcp_stream.cpp  timer_service.cpp  waker.cpp  work_sharing_executor.cpp  work_stealing_executor.cpp  ws_listener.cpp  ws_stream.cpp
src/io/: circular_byte_buffer.cpp  signal.cpp  ws_stream.cpp
src/pico/: mqtt.cpp  mqtt_ctx.h
src/runtime/: current_thread_executor.cpp  runtime.cpp  single_threaded_executor.cpp  single_threaded_uv_executor.cpp
src/task/: blocking_pool.cpp  context.cpp  task.cpp
test/: CMakeLists.txt  co_assert.h  conanfile.py  conanfile.txt  executor_traits.h  pcie_decoder.cpp  pcie_decoder.h  pcie_packet.h  pcie_reader.cpp  pcie_stream.h  test_co_invoke.cpp  test_coro.cpp  test_coro_scope.cpp  test_coro_stream.cpp  test_event.cpp  test_executor_task.cpp  test_file.cpp  test_future.cpp  test_future_ref.cpp  test_io_service.cpp  test_isr_event.cpp  test_join_handle.cpp  test_join_set.cpp  test_local_run_queue.cpp  test_mpsc.cpp  test_oneshot.cpp  test_pcie_decoder.cpp  test_pcie_stream_integration.cpp  test_pipe.cpp  test_poll_result.cpp  test_poll_stream.cpp  test_runtime.cpp  test_select.cpp  test_single_threaded_uv_executor.cpp  test_skynet.cpp  test_sleep.cpp  test_spawn_blocking.cpp  test_spawn_on.cpp  test_stream.cpp  test_stream_handle.cpp  (+6 more)
test/detail/: test_frame_pool.cpp  test_intrusive_list.cpp  test_poll_result.cpp  test_rc.cpp  test_waker_context.cpp
test/io/: test_circular_byte_buffer.cpp  test_file.cpp  test_pipe.cpp  test_poll_stream.cpp  test_signal.cpp
test/misc/: pcie_decoder.cpp  pcie_decoder.h  pcie_stream.h
test/pico/: test_async_dma.cpp  test_mqtt_client.cpp  test_pico_executor.cpp  test_tcp_stream.cpp  test_tcp_stream_real.cpp
test/pico/lwip_host/: lwipopts.h  sys_now.c
test/pico/lwip_host/arch/: cc.h
test/pico/stub/: cyw43_arch_stub.cpp  lwip_tcp_stubs.cpp
test/pico/stub/hardware/: dma.cpp  dma.h  irq.h  sync.h
test/pico/stub/pico/: critical_section.h  cyw43_arch.h  stdlib.h  time.h
test/runtime/: test_executor_task.cpp  test_single_threaded_uv_executor.cpp  test_uv_future.cpp  test_work_sharing_executor.cpp
test/stress/: test_skynet.cpp
test/sync/: test_broadcast.cpp  test_isr_event.cpp  test_mpsc.cpp  test_oneshot.cpp  test_select.cpp  test_watch.cpp
test/task/: test_coro_scope.cpp  test_join_handle.cpp  test_join_set.cpp  test_spawn_blocking.cpp  test_stream_handle.cpp
(+46 files in other folders)
